# hoshiko-nids

./: .gitignore  README.md  main.py  pyproject.toml  rules.txt  tox.ini
.github/workflows/: python-app.yml
hoshi/: __init__.py  packet.py  rule.py
tests/: hoshiko_test.py
