[tool.poetry]
name = "hoshi"
version = "0.1.0"
description = ""
authors = ["Anthony V <anthonyviriya98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
tox = "^4.5.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
